avoid horizontal scrolling

--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -127,7 +127,7 @@ article{
   font-family: 'Cormorant', serif;
   width: 100%;
   padding: 90px 20px 50px 20px;  
-  
+  box-sizing: border-box;
 }
 
 .timeline{
